--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.geoshoppingfinal">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +14,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAaOSozlNmzZcjQ_8rgnSiZ1CX92wuskus"/>
+        <receiver android:name=".GeofenceBroadcastReceiver"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
