--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddItemActivity"></activity>
+        <activity android:name=".HelpActivity"
+            android:theme="@style/AppTheme.NoActionBar">></activity>
+        <activity android:name=".AddItemActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
